added shader class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 23)
 link_directories(/opt/homebrew/lib)
 include_directories(/opt/homebrew/include)
 
-add_executable(engine main.cpp engine.cpp engine.h window.cpp window.h)
+add_executable(engine main.cpp engine.cpp engine.h window.cpp window.h shader.cpp shader.h)
 find_package(OpenGL REQUIRED)
 target_link_libraries(engine OpenGL::GL)
 find_package(GLEW REQUIRED)
